nuevo csv vehiculos registrados mundo

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -1836,6 +1836,119 @@
    "source": [
     "vehicles['Fuel_Type'].unique()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Data Source</th>\n",
+       "      <th>Number of registered vehicles</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>RS_001</td>\n",
+       "      <td>655 357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>RS_002</td>\n",
+       "      <td>563 106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Antigua and Barbuda</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>RS_003</td>\n",
+       "      <td>36 030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>RS_004</td>\n",
+       "      <td>21 633 587</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Armenia</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Country   Year Data Source Number of registered vehicles\n",
+       "0          Afghanistan   2013      RS_001                       655 357\n",
+       "1              Albania   2016      RS_002                       563 106\n",
+       "2  Antigua and Barbuda   2016      RS_003                        36 030\n",
+       "3            Argentina   2016      RS_004                    21 633 587\n",
+       "4              Armenia                                              NaN"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# we open the thirddataset about vehicles' emissions\n",
+    "register = pd.read_csv('input/registered_vehicles.csv',encoding='latin-1')\n",
+    "register.head()"
+   ]
   }
  ],
  "metadata": {
