nombre cleaning.py cambiado y actualizado en jupyters

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -9,7 +9,7 @@
     "#we import libraries as necessary\n",
     "import pandas as pd\n",
     "import re\n",
-    "import src.columns as col\n",
+    "import src.cleaning as clean\n",
     "import src.manipulating_df as man\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np"
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
        "[5 rows x 268 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1034,7 @@
        "[231 rows x 268 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,9 +1045,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please, enter the folder where your cvs file is saved:\n",
+      "input\n",
+      "Please, enter the name for the cvs file you want to open without extension:\n",
+      "Greenhouse_Gas_Emissions_worldwide\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1155,20 +1165,21 @@
        "4     381.135610     158.400094    25546.77744  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# we open the second dataset about GHG emissions worldwide\n",
-    "emissions = pd.read_csv('input/Greenhouse_Gas_Emissions_worldwide.csv',encoding='latin-1')\n",
-    "emissions.head()"
+    "emissions = man.open_cvs()\n",
+    "emissions.head()\n",
+    "##Greenhouse_Gas_Emissions_worldwide is the file in input folder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1278,7 +1289,7 @@
        "4     381.135610     158.400094    25546.77744  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1286,13 +1297,13 @@
    "source": [
     "#we will rename columns removing blank spaces to avoid  problems in future by calling a function from the\n",
     "# file columns.py\n",
-    "col.rename_columns(emissions)\n",
+    "clean.rename_columns(emissions)\n",
     "emissions.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1320,7 @@
        "       'United States of America'], dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1451,9 +1462,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please, enter the folder where your cvs file is saved:\n",
+      "input\n",
+      "Please, enter the name for the cvs file you want to open without extension:\n",
+      "CO2_vehicles_Emissions_Canada\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1599,15 +1620,16 @@
        "4                           27                  244  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# we open the second dataset about vehicles' emissions\n",
-    "vehicles = pd.read_csv('input/CO2_vehicles_Emissions_Canada.csv',encoding='latin-1')\n",
-    "vehicles.head()"
+    "vehicles = man.open_cvs()\n",
+    "vehicles.head()\n",
+    "##CO2_vehicles_Emissions_Canada is the file in input folder"
    ]
   },
   {
@@ -1789,7 +1811,7 @@
    "source": [
     "#we will rename columns removing blank spaces to avoid  problems in future by calling a function from the\n",
     "# file columns.py\n",
-    "col.rename_columns(vehicles)\n",
+    "clean.rename_columns(vehicles)\n",
     "vehicles.head()"
    ]
   },
@@ -1860,9 +1882,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please, enter the folder where your cvs file is saved:\n",
+      "input\n",
+      "Please, enter the name for the cvs file you want to open without extension:\n",
+      "registered_vehicles\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1939,15 +1971,16 @@
        "4              Armenia                                              NaN"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# we open the thirddataset about vehicles' emissions\n",
-    "register = pd.read_csv('input/registered_vehicles.csv',encoding='latin-1')\n",
-    "register.head()"
+    "# we open the second dataset about registered vehicles in the world\n",
+    "register = man.open_cvs()\n",
+    "register.head()\n",
+    "##registered_vehicles is the file in input folder"
    ]
   }
  ],
