--- a/emissions_analysis.ipynb
+++ b/emissions_analysis.ipynb
@@ -9,7 +9,7 @@
     "#we import libraries as necessary\n",
     "import pandas as pd\n",
     "import re\n",
-    "import src.columns as col\n",
+    "import src.cleaning as clean\n",
     "import src.manipulating_df as man\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -25,6 +25,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Please, enter the folder where your cvs file is saved:\n",
+      "src\n",
       "Please, enter the name for the cvs file you want to open without extension:\n",
       "world_emissions\n"
      ]
@@ -32,12 +34,13 @@
    ],
    "source": [
     "#we wil import our previously cleaned worldwide_emissions cvs file to take conclusions out of it\n",
-    "world_emissions=man.open_cvs()"
+    "world_emissions=man.open_cvs()\n",
+    "#world_emissions file in src folder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -63,6 +66,8 @@
        "      <th></th>\n",
        "      <th>Year</th>\n",
        "      <th>CO2_Tonnes</th>\n",
+       "      <th>Year_interval</th>\n",
+       "      <th>Emissions_per_year</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -70,41 +75,51 @@
        "      <th>0</th>\n",
        "      <td>1751</td>\n",
        "      <td>9350528.0</td>\n",
+       "      <td>&lt;=1700</td>\n",
+       "      <td>534010.74</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1752</td>\n",
        "      <td>18704720.0</td>\n",
+       "      <td>&lt;=1700</td>\n",
+       "      <td>1067621.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1753</td>\n",
        "      <td>28058912.0</td>\n",
+       "      <td>&lt;=1700</td>\n",
+       "      <td>1600622.48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1754</td>\n",
        "      <td>37416768.0</td>\n",
+       "      <td>&lt;=1700</td>\n",
+       "      <td>2133225.09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1755</td>\n",
        "      <td>46778288.0</td>\n",
+       "      <td>&lt;=1700</td>\n",
+       "      <td>2665429.52</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Year  CO2_Tonnes\n",
-       "0  1751   9350528.0\n",
-       "1  1752  18704720.0\n",
-       "2  1753  28058912.0\n",
-       "3  1754  37416768.0\n",
-       "4  1755  46778288.0"
+       "   Year  CO2_Tonnes Year_interval  Emissions_per_year\n",
+       "0  1751   9350528.0        <=1700           534010.74\n",
+       "1  1752  18704720.0        <=1700          1067621.00\n",
+       "2  1753  28058912.0        <=1700          1600622.48\n",
+       "3  1754  37416768.0        <=1700          2133225.09\n",
+       "4  1755  46778288.0        <=1700          2665429.52"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,31 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "MultiIndex([('CO2_Tonnes',  'sum'),\n",
-       "            ('CO2_Tonnes', 'mean')],\n",
-       "           )"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "world_emissions[\"Year_interval\"] =pd.cut(world_emissions['Year'],[-1700,1800,1900,2000,2050],labels=['<=1700','1800','1900','2000'])\n",
-    "world_emissions_years=world_emissions.groupby(['Year_interval']).agg({\"CO2_Tonnes\":[\"sum\",\"mean\"]})\n",
-    "world_emissions_years.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -217,14 +208,33 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "world_emissions[\"Year_interval\"] =pd.cut(world_emissions['Year'],[-1700,1800,1900,2000,2050],labels=['<=1700','1800','1900','2000'])\n",
+    "world_emissions_years=world_emissions.groupby(['Year_interval']).agg({\"CO2_Tonnes\":[\"sum\",\"mean\"]})\n",
+    "display(world_emissions_years)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc77692f820>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f7f2fb9c040>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -242,78 +252,9 @@
     }
    ],
    "source": [
-    "display(world_emissions_years)\n",
     "plt.figure(figsize=(15,5))\n",
     "world_emissions_years['CO2_Tonnes',  'sum'].plot.barh(title='CO2 world emissions over time')\n",
     "world_emissions_years['CO2_Tonnes',  'mean'].plot(title='CO2 world emissions over time')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1900      100\n",
-       "1800      100\n",
-       "<=1700     50\n",
-       "2000       17\n",
-       "Name: Year_interval, dtype: int64"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "world_emissions['Year_interval'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0      5.340107e+05\n",
-       "1      1.067621e+06\n",
-       "2      1.600622e+06\n",
-       "3      2.133225e+06\n",
-       "4      2.665430e+06\n",
-       "           ...     \n",
-       "262    7.103825e+10\n",
-       "263    7.298908e+10\n",
-       "264    7.444169e+10\n",
-       "265    7.638889e+10\n",
-       "266    7.833416e+10\n",
-       "Name: Emissions_per_year, Length: 267, dtype: float64"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "world_emissions['Emissions_per_year']=round(world_emissions['CO2_Tonnes']/world_emissions['Year']*100,2)\n",
-    "world_emissions['Emissions_per_year']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "emissions_per_year=[]\n",
-    "for i in range(0,len(world_emissions['Year_interval'].value_counts())):\n",
-    "    if world_emissions_years['Year']\n",
-    "    emissions_per_year.append(round(world_emissions_years['CO2_Tonnes'].sum()/i))"
    ]
   }
  ],
