Nueva funcion para redondear a 2 decimales y jupyters actualizados

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -357,85 +357,46 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Year</th>\n",
-       "      <th>CO2_Tonnes</th>\n",
+       "      <th>CO2_emissions</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1751</td>\n",
-       "      <td>9350528</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1752</td>\n",
-       "      <td>18704720</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1753</td>\n",
-       "      <td>28058912</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1754</td>\n",
-       "      <td>37416768</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>1755</td>\n",
-       "      <td>46778288</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>263</th>\n",
-       "      <td>2013</td>\n",
-       "      <td>1.43e+12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>264</th>\n",
-       "      <td>2014</td>\n",
-       "      <td>1.47e+12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>265</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>1.5e+12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>266</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>1.54e+12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>267</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>1.58e+12</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>267 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Year CO2_Tonnes\n",
-       "1    1751    9350528\n",
-       "2    1752   18704720\n",
-       "3    1753   28058912\n",
-       "4    1754   37416768\n",
-       "5    1755   46778288\n",
-       "..    ...        ...\n",
-       "263  2013   1.43e+12\n",
-       "264  2014   1.47e+12\n",
-       "265  2015    1.5e+12\n",
-       "266  2016   1.54e+12\n",
-       "267  2017   1.58e+12\n",
-       "\n",
-       "[267 rows x 2 columns]"
+       "   Year  CO2_emissions\n",
+       "1  1751            0.0\n",
+       "2  1752            0.0\n",
+       "3  1753            0.0\n",
+       "4  1754            0.0\n",
+       "5  1755            0.0"
       ]
      },
      "execution_count": 5,
@@ -444,32 +405,17 @@
     }
    ],
    "source": [
-    "world_emissions"
+    "world_emissions['CO2_emissions']=world_emissions['CO2_Tonnes'].map(lambda x:(x/1e10))\n",
+    "clean.rounding(world_emissions)\n",
+    "world_emissions=world_emissions[['Year','CO2_emissions']]\n",
+    "world_emissions.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please, enter the name for the cvs file you want to exportworld_emissions\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'world_emissions has been exported to cvs file'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "##we save our desired df as cvs file so as to open it in another jupyter-notebook\n",
     "man.export_cvs(world_emissions)"
