Nueva funcion para redondear a 2 decimales y jupyters actualizados

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -413,9 +413,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please, enter the name for the cvs file you want to exportworld_emissions\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'world_emissions has been exported to cvs file'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "##we save our desired df as cvs file so as to open it in another jupyter-notebook\n",
     "man.export_cvs(world_emissions)"
